--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <select class="breed-select"></select>
-    <p class="loader">Loading data, please wait...</p>
-    <p class="error">Oops! Something went wrong! Try reloading the page!</p>
+    <select class="breed-select"  id="single"></select>
+    <span class="loader"></span>
+    <!-- <p class="loader js-unActive">Loading data, please wait...</p> -->
+    <!-- <p class="error js-unActive">Oops! Something went wrong! Try reloading the page!</p> -->
     <div class="cat-info">
       
     </div>
