--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <select class="breed-select"  id="single"></select>
+    <select class="breed-select"  id="single" hidden></select>
     <span class="loader"></span>
+  
     <!-- <p class="loader js-unActive">Loading data, please wait...</p> -->
     <!-- <p class="error js-unActive">Oops! Something went wrong! Try reloading the page!</p> -->
     <div class="cat-info">
